Actualización en la pág. Movements (Agregar Asientos)